--- a/package.json
+++ b/package.json
@@ -11,7 +11,11 @@
   "dependencies": {
     "@cornerstonejs/dicom-image-loader": "^1.19.1",
     "cornerstone-core": "^2.6.1",
+    "cornerstone-math": "^0.1.10",
     "cornerstone-tools": "^6.0.10",
+    "cornerstone-wado-image-loader": "^4.13.2",
+    "dicom-parser": "^1.8.21",
+    "hammerjs": "^2.0.8",
     "mongoose": "^7.5.3",
     "next": "latest",
     "next-auth": "^4.23.1",
