--- a/package.json
+++ b/package.json
@@ -9,7 +9,10 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@auth/prisma-adapter": "^1.0.3",
     "@cornerstonejs/dicom-image-loader": "^1.19.1",
+    "@prisma/client": "^5.3.1",
+    "bcrypt": "^5.1.1",
     "cornerstone-core": "^2.6.1",
     "cornerstone-math": "^0.1.10",
     "cornerstone-tools": "^6.0.10",
@@ -18,13 +21,15 @@
     "hammerjs": "^2.0.8",
     "mongoose": "^7.5.3",
     "next": "latest",
-    "next-auth": "^4.23.1",
+    "next-auth": "^4.23.2",
     "react": "latest",
     "react-dom": "latest",
-    "styled-components": "^6.0.8"
+    "styled-components": "^6.0.8",
+    "tailwindcss": "^3.3.3"
   },
   "devDependencies": {
     "eslint": "latest",
-    "eslint-config-next": "latest"
+    "eslint-config-next": "latest",
+    "prisma": "^5.3.1"
   }
 }
