--- a/package.json
+++ b/package.json
@@ -25,7 +25,8 @@
     "react": "latest",
     "react-dom": "latest",
     "styled-components": "^6.0.8",
-    "tailwindcss": "^3.3.3"
+    "tailwindcss": "^3.3.3",
+    "uid": "^2.0.2"
   },
   "devDependencies": {
     "eslint": "latest",
